fix(products): now use element instead of ::before && ::after because transform:rotate was causing ::after to rotate with the element. Maybe each element wrapped inside an element containing ::before || ::after inherits them?

--- a/src/UI/UIComponents/PAGES/home/componentsPhoneSize/products/products.module.scss
+++ b/src/UI/UIComponents/PAGES/home/componentsPhoneSize/products/products.module.scss
@@ -1,78 +1,77 @@
 .categories {
-  .categoryTitleWrapper {
-    padding: var(--spacing-1) 0px;
-    position: relative;
-    ::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-
-      width: 100%;
-      height: 2px;
-
-      background-color: black;
-    }
-
-    ::before {
-      z-index: 2;
-      content: "";
-      position: absolute;
-      left: -15px;
-      bottom: -1.5px;
-
-      height: 5px;
-      width: 5px;
-
-      background-color: var(--websiteContainerColor);
-
-      transition: left 1s cubic-bezier(0.55, 0, 0.1, 1);
-      border-radius: 90px;
-    }
-
-    &:hover {
-      ::before {
-        left: 100%;
-      }
-    }
-
-    .title {
-      font-variation-settings: "wght" 500;
-    }
-
-    .exploreMoreWrapper {
+  .category {
+    .categoryTitleWrapper {
       display: flex;
-      .exploreMore {
-        font-variation-settings: "wght" 400;
+      flex-direction: column;
+      padding: var(--spacing-1) 0px;
+
+      .title {
+        font-variation-settings: "wght" 500;
       }
 
-      .arrowSVG {
-        transform: rotateZ(270deg);
-
+      .exploreMoreWrapper {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0px var(--spacing-1);
+
+        .exploreMore {
+          font-variation-settings: "wght" 400;
+        }
+
+        .arrowSVG {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          transform: rotateZ(270deg);
+        }
+      }
+
+      .underlineWithDot {
+        width: 100%;
+        height: 2px;
+        background-color: black;
+        position: relative;
+        .dot {
+          background-color: var(--websiteContainerColor);
+          transition: left 1s cubic-bezier(0.55, 0, 0.1, 1);
+
+          height: 10px;
+          width: 10px;
+          position: absolute;
+          left: -25px;
+          bottom: -2.5px;
+
+          border-radius: 90px;
+        }
+      }
+
+      &:hover {
+        .underlineWithDot {
+          .dot {
+            background-color: var(--websiteContainerColor);
+            transition: left 1s cubic-bezier(0.55, 0, 0.1, 1);
+            left: 100%;
+          }
+        }
       }
     }
-  }
 
-  .products {
-    padding: var(--spacing-2) 0px;
-    .product {
-      border-bottom: 1px solid var(--navUnderlineColor);
+    .products {
+      padding: var(--spacing-2) 0px;
+      .product {
+        border-bottom: 1px solid var(--navUnderlineColor);
 
-      padding-bottom: var(--spacing-1);
-      .title {
-        padding: var(--spacing-2) 0px;
-      }
+        padding-bottom: var(--spacing-1);
+        .title {
+          padding: var(--spacing-2) 0px;
+        }
 
-      .img {
-        padding: var(--spacing-2) var(--spacing-5);
-      }
+        .img {
+          padding: var(--spacing-2) var(--spacing-5);
+        }
 
-      .button {
-        width: 100%;
+        .button {
+          width: 100%;
+        }
       }
     }
   }
